transform pivot point to active - crashes blender #69999

Closed
opened 2019-09-18 00:30:08 +02:00 by Szymon Warunek · 12 comments

Windows 10 1903
Operating system: Windows 10 1903 64 Bits
Graphics card: GeForce GTX 960

Blender 2.81 alpha build from (14.09.2019)
Broken: version: 2.81 alpha (14.09.2019)transform pivot point,active element error.jpg
Worked: (optional)
when rotating object inside collection - blender crashes when selected transform pivot point to active element.mov
transform pivot point of collection issue.blend,when trying to rotate collection
[Please fill out a short description of the error here]

i tried to rotate collection - chosing transform pivot point orientation,to set as active,than suddenly blender quits
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**Windows 10 1903** Operating system: Windows 10 1903 64 Bits Graphics card: GeForce GTX 960 **Blender 2.81 alpha build from (14.09.2019)** Broken: version: 2.81 alpha (14.09.2019)![transform pivot point,active element error.jpg](https://archive.blender.org/developer/F7754059/transform_pivot_point_active_element_error.jpg) Worked: (optional) [when rotating object inside collection - blender crashes when selected transform pivot point to active element.mov](https://archive.blender.org/developer/F7754053/when_rotating_object_inside_collection_-_blender_crashes_when_selected_transform_pivot_point_to_active_element.mov) **[transform pivot point of collection issue.blend](https://archive.blender.org/developer/F7754070/transform_pivot_point_of_collection_issue.blend),when trying to rotate collection** [Please fill out a short description of the error here] **i tried to rotate collection - chosing transform pivot point orientation,to set as active,than suddenly blender quits** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @szymi

Added subscriber: @szymi
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I cannot reproduce the issue.
Please provide exact steps for what to do to reproduce the crash (in text form).

Also the file you uploaded is a bit different from the file you used in the video. The initial selection is different.

I cannot reproduce the issue. Please provide exact steps for what to do to reproduce the crash (in text form). Also the file you uploaded is a bit different from the file you used in the video. The initial selection is different.
Author

when i try to rotate collection - blender crashes,when i use transform pivot point as active

when i try to rotate collection - blender crashes,when i use transform pivot point as active
Author

when i rotate collection (bike bottom frame 2)
i will upload a blend file,that collection,has objects in it,in transform pivot point option,i can't use active setting,because blender crashes.

when i rotate collection (bike bottom frame 2) i will upload a blend file,that collection,has objects in it,in transform pivot point option,i can't use active setting,because blender crashes.
Author

when i set pivot point to active,blender crashes,when i try to select and rotate it

when i set pivot point to active,blender crashes,when i try to select and rotate it
Author

pivot point to active,crashes blender,when i try to select it,having a collection in the scene

pivot point to active,crashes blender,when i try to select it,having a collection in the scene
Author

check in your company computers,if you get that the same error,or if is ok{F7755795}

check in your company computers,if you get that the same error,or if is ok{[F7755795](https://archive.blender.org/developer/F7755795/pivot_point_to_active_error.blend)}

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I can't reproduce the issue either, on Linux with Blender 441f6cf020

I can't reproduce the issue either, on Linux with Blender 441f6cf0206c7ee029f618fdab25a4e7adfacc91

This issue was referenced by 6dc7cefb78

This issue was referenced by 6dc7cefb785ead19ec7c54c01806c05032d29d77

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-09-20 02:24:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69999
No description provided.