Fix T69999: Active element pivot crashes without active object